--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.0",
     "chart.js": "^2.9.4",
     "google-maps-react": "^2.0.6",
+    "nanoid": "^3.1.20",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
